apps/base/media/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &deploymentName lidarr-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *deploymentName
  template:
    metadata:
      labels:
        app: *deploymentName
    spec:
      containers:
        - env:
            - name: TZ
              value: Europe/London
            - name: PUID
              value: "1001"
            - name: PGID
              value: "100"
          image: ghcr.io/linuxserver/lidarr:latest@sha256:67887807b13ae025c0fe979da298347c8609969087ab064c81d8e9acc1e06bbf
          imagePullPolicy: IfNotPresent
          name: lidarr
          ports:
            - containerPort: 8686
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config-volume
              subPath: lidarr/config
            - mountPath: /downloads
              name: data-volume
              subPath: jellyfin/downloads
            - mountPath: /music
              name: data-volume
              subPath: jellyfin/media/music
      hostname: lidarr
      volumes:
        - name: config-volume
          nfs:
            server: ${NFS_STORAGE_HOST_FAST}
            path: ${NFS_STORAGE_CONFIG_DATA_PATH}
        - name: data-volume
          nfs:
            server: ${NFS_STORAGE_HOST_FAST}
            path: /mnt/mopower/swarm-data
