apps/base/media/lidarr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lidarr.local.${DOMAIN}`)
      kind: Rule
      services:
        - name: lidarr-service
          port: 8686
  tls:
    certResolver: letsencrypt
